--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/cli": "^7.4.2",
     "@capacitor/core": "^7.4.2",
     "@capacitor/ios": "^7.4.2",
+    "@capacitor/push-notifications": "^7.0.1",
     "@convex-dev/auth": "^0.0.87",
     "@ionic/react": "^8.6.5",
     "@radix-ui/react-slot": "^1.2.3",
