--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@capacitor/core": "^7.4.2",
     "@capacitor/ios": "^7.4.2",
     "@capacitor/push-notifications": "^7.0.1",
+    "@convex-dev/agent": "^0.1.16",
     "@convex-dev/auth": "^0.0.87",
+    "@convex-dev/geospatial": "^0.1.9",
     "@ionic/react": "^8.6.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@stripe/react-stripe-js": "^3.8.1",
