--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@convex-dev/geospatial": "^0.1.9",
     "@googlemaps/js-api-loader": "^1.16.10",
     "@ionic/react": "^8.6.5",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@stripe/react-stripe-js": "^3.8.1",
     "@stripe/stripe-js": "^7.7.0",
     "@types/canvas-confetti": "^1.9.0",
