--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/core": "^7.4.2",
     "@capacitor/ios": "^7.4.2",
     "@capacitor/push-notifications": "^7.0.1",
+    "@capgo/capacitor-social-login": "^7.8.3",
     "@convex-dev/agent": "^0.1.16",
     "@convex-dev/auth": "^0.0.87",
     "@convex-dev/geospatial": "^0.1.9",
